# mapcache

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  LICENSE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE.txt  Makefile  Makefile.inc.in  Makefile.vc  README  README.md  README.rst  Vagrantfile  appveyor.yml  astyle.sh  configure  configure.in  mapcache.xml  mapcache.xml.sample  nmake.opt  release-notes.sh  release.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  check-crlf.yml  demo.yml  irc_notify.yml
apache/: CMakeLists.txt  Makefile.in  mod_mapcache-config.h.in  mod_mapcache.c
cgi/: CMakeLists.txt  Makefile.in  mapcache-cgi-config.h.in  mapcache.c
cmake/: FindAPACHE.cmake  FindBerkeleyDB.cmake  FindGDAL.cmake  FindGEOS.cmake  FindGEOTIFF.cmake  FindGooglePerf.cmake  FindJSONC.cmake  FindLMDB.cmake  FindMAPSERVER.cmake  FindPCRE.cmake  FindPixman.cmake  FindRIAK.cmake  FindRedis.cmake  FindSQLITE.cmake
contrib/lmdb_utils/: CMakeLists.txt  mapcache_lmdb_get.c  mapcache_lmdb_list.c
contrib/mapcache_detail/: CMakeLists.txt  mapcache_detail.c  mapcache_detail_config.h.in
contrib/mapcache_export_prep/: CMakeLists.txt  mapcache_export_prep.c  mapcache_export_prep_config.h.in
debian/: README  changelog  control  copyright  libapache2-mod-mapcache.install  libapache2-mod-mapcache.postinst  libapache2-mod-mapcache.prerm  libmapcache.install  mapcache-cgi.install  mapcache-tools.install  rules
include/: errors.h  ezxml.h  keystone-client.h  mapcache-config.h.in  mapcache-version.h.in  mapcache.h  mapcache_services.h  pam.h  swift-client.h  util.h
lib/: Makefile.in  axisorder.c  buffer.c  cache.c  cache_bdb.c  cache_composite.c  cache_couchbase.c  cache_disk.c  cache_fallback.c  cache_lmdb.c  cache_memcache.c  cache_multitier.c  cache_redis.c  cache_rest.c  cache_riak.c  cache_sqlite.c  cache_swift.c  cache_tiff.c  cache_tokyocabinet.c  configuration.c  configuration_xml.c  connection_pool.c  core.c  dimension.c  dimension_es.c  dimension_pg.c  dimension_sqlite.c  dimension_time.c  ezxml.c  grid.c  hmac-sha.c  http.c  image.c  image_error.c  imageio.c  imageio_blob.c  imageio_gif.c  imageio_jpeg.c  imageio_mixed.c  imageio_png.c  (+23 more)
nginx/: CMakeLists.txt  README  config.in  nginx.conf  ngx_http_mapcache_module.c
packaging/centos/: mapcache.spec
scripts/vagrant/: mapcache.sh  packages.sh
tests/: run.sh  run_tests.sh  setup.sh  travis_setup.sh
tests/data/: mapcache.conf  mapcache.load  mapcache.xml  mapcache_backend_template.xml  world.tif
tests/expected/: wms_capabilities.xml  wmts_capabilities.xml
tests/mcpython/: generate_synthetic_geotiff.py  test_disk_cache_pytest.py  test_sqlite_cache.py  test_sqlite_cache_pytest.py  verification_core.py
util/: CMakeLists.txt  Makefile.in  mapcache-util-config.h.in  mapcache_seed.c
